refactoring service impl class